- playback improvements for SRD (HEVC tiling and independent streams)
- CMAF-compatible signaling
- support for PPS injection for inband param set modes
- improved SmoothStreaming support
- DASH period continuity support (from playlists or reframer)
- DASH MPD Chaining support
- support for text segments in their native format (WebVTT, TTML) in dasher

## Image File Format (HEIF)
- support for grid creation and other derive images
- support for encryption
- support for time range in -add-image
- support for item to sample data reference (no copy)
- support for item to item data reference (no copy)
- AV1 (AVIF) and VVC support

## MP4Box
- in-place editing support for MP4Box (no file remux) 
- improved splitting in MP4Box, including sample-accurate split
- ISOBMFF edit lists modification through MP4Box :edits and -edits
- support for track extraction from non ISOBMF sources in MP4Box
- most import options can now be applied on an existing ISOBMF file
- support for multiple filter chains per source in MP4Box dash or add syntax
- chunk interleaving dumper

## Filters
- added avmix, a playlist based audio video mixer/compositor
- Python bindings for filter session
- support for custom HAS adaptation algorithms (JS and Python)
- support for custom remotery callbacks (JS and Python)
- added avgen counter generation
- splicing support in playlists: raw and compressed domain, vod and live splicing
- tile splitting now available as a filter 
- raw options for flist and reframer
- flip and rotate in vout
- simple UI for vout to test seeking and speed modes
- improved colorspace support in rendering (OpenGL only)
- improved round-trip audio decode
- improved audio resampler
- added back old arch compositor features (TEMI support, HEVC tiling JS monitoring, MPEG-4 SegmentDescriptor) 
- support for reading back frame interface data (GPU, decoder mem) in JS or Python sink filters
- support for memory storage in httpout server file sink
- FileIO wrapper available in JS and Python