@@ -1126,6 +1126,8 @@ enum
 	GF_PROP_PID_CLAMP_DUR = GF_4CC('D','C','M','D'),
 	GF_PROP_PID_HLS_PLAYLIST = GF_4CC('H','L','V','P'),
 	GF_PROP_PID_HLS_GROUPID = GF_4CC('H','L','G','I'),
+	GF_PROP_PID_HLS_EXT_MASTER = GF_4CC('H','L','M','X'),
+	GF_PROP_PID_HLS_EXT_VARIANT = GF_4CC('H','L','V','X'),
 	GF_PROP_PID_DASH_CUE = GF_4CC('D','C','U','E'),
 	GF_PROP_PID_DASH_SEGMENTS = GF_4CC('D','C','N','S'),
 	GF_PROP_PID_CODEC = GF_4CC('C','O','D','S'),
